force-app/main/default/objects/Hotfix__c/Hotfix__c.object-meta.xml
<CustomObject>
    <label>Hotfix</label>
    <nameField>
        <displayFormat>HF-{00000}</displayFormat>
        <label>HF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotfixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>