force-app/main/default/objects/Hotfix__c/fields/Hotfix_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Hotfix_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotfix Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hotfixes</relationshipName>
    <type>Lookup</type>
</CustomField>