force-app/main/default/objects/Hotfix__c/fields/IsMigrated__c.field-meta.xml
<CustomField>
    <fullName>IsMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated?</label>
    <type>Checkbox</type>
</CustomField>