force-app/main/default/objects/Hotfix__c/fields/MigrationDate__c.field-meta.xml
<CustomField>
    <fullName>MigrationDate__c</fullName>
    <label>Migration Date</label>
    <type>DateTime</type>
</CustomField>