force-app/main/default/objects/Hotfix__c/fields/RevisionCommit__c.field-meta.xml
<CustomField>
    <fullName>RevisionCommit__c</fullName>
    <label>Revision Commit#</label>
    <type>TextArea</type>
</CustomField>